--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body {
-  margin: 0;
+  margin: 0px;
 }
 
 ul {
+  padding: 0px;
+  margin: 0px;
   list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 img {
@@ -26,8 +26,4 @@ img {
   width: 80vw;
   max-width: 800px;
   margin: 0 20px;
-}
-
-.slide {
-  transform: translate3d(-500px, 0, 0);
 }
